--- a/css/calendar.css
+++ b/css/calendar.css
@@ -149,7 +149,7 @@ border-bottom:2px solid #c3d9ff;
 	cursor:default;
 	margin-right:10px;
 }
-.tg-bg-sta {
+.tg-bg-sat {
         background-color:#F2F4FF
 }
 .tg-bg-sun {
@@ -409,7 +409,7 @@ border-bottom:2px solid #c3d9ff;
 .st-bg {
 	border-left:1px solid #c3d9ff
 }
-.st-bg-sta {
+.st-bg-sat {
 	background-color:#F2F4FF
 }
 .st-bg-sun {
